Finish linear operation ver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.22)
-project(RISC_V_Simulator C)
+cmake_minimum_required(VERSION 3.16)
+project(RISC_V_Simulator)
 
 set(CMAKE_C_STANDARD 11)
 
 include_directories(.)
+include_directories(1-seq)
 
 add_executable(code
-        main.cpp
-        predictor.h)
+        1-seq/main.cpp)
